# hls-scte35-manipulator-server

./: .dockerignore  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
hls_scte35_manipulator_server/: __init__.py  hls_scte35_manipulator_server.py
hls_scte35_manipulator_server/headers/: __init__.py  headers.py
hls_scte35_manipulator_server/hls/: __init__.py  hls.py
hls_scte35_manipulator_server/logger/: __init__.py  logger.py
hls_scte35_manipulator_server/middleware/: __init__.py  middleware.py
hls_scte35_manipulator_server/parser/: __init__.py  parser.py
hls_scte35_manipulator_server/patterns/: __init__.py  hls_scte35_tag.py  str_escape.py
hls_scte35_manipulator_server/profiles/: __init__.py  profile-convert-ads-to-break.json  profile-convert-break-to-ads.json  profile-descriptor-ads-filter.json  profile-splice-filter.json  profile-timesignal-filter.json  profile.json  profiles.py
kubernetes-base/: deployment.yaml  service.yaml
tests/: conftest.py
tests/hls/: test_hls.py
tests/hls_x_oatcls_scte35/: test_hls_x_oatcls_scte35.py
tests/hls_x_splicepoint/: test_hls_x_splicepoint.py
tests/streamPlaylists/: 00_master.txt  00_streamPlaylist.txt  02_x_splicepoint_streamPlaylist_timesignal_filter.txt  03_x_splicepoint_streamPlaylist_convert_ads_to_break.txt  04_x_splicepoint_streamPlaylist_convert_break_to_ads.txt  05_x_splicepoint_streamPlaylist_descriptor_ads_filter.txt  06_x_oatcls_scte35_streamPlaylist_splice_filter.txt  08_x_oatcls_scte35_streamPlaylist_convert_ads_to_break.txt  (+2 more)
tests/utils/: utils.py  (+1 more)
